--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rename: ^3.0.1
+  lottie: ^3.0.0  
+  fl_chart: ^0.66.0  
   flutter_svg: ^2.0.9
   gap: ^3.0.1
   go_router: ^12.1.0
@@ -65,7 +68,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_expandable_fab: ^2.0.0
   shared_preferences: ^2.2.2
-  email_sender: ^1.3.3
+  # email_sender: ^1.3.3
   email_otp: ^2.1.1
 
   flutter_localizations:
